changes and edits

--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -129,3 +129,8 @@
     @apply hidden!;
   }
 }
+
+::view-transition-old(root), ::view-transition-new(root) {
+    animation: none;
+    mix-blend-mode: normal;
+}
